# foundation-rs

./: Cargo.toml  LICENSE  README.md  distribute.sh
config/: config.toml  default.toml  development.toml  production.toml
curl-tests/: auth-header.txt  curl-format.txt  login-request.json  test-auth.sh  test-mgmt-api.sh  test-mgmt-server.sh  test-v1-api.sh  test-v1-server.sh
maplit/: Cargo.toml
maplit/src/: lib.rs
oracle_derive/: Cargo.toml
oracle_derive/src/: lib.rs  query.rs  utils.rs
oracle_derive/src/internals/: ast.rs  ctx.rs  mod.rs
queries/: example.json  example.qlang
server/: Cargo.toml
server/src/: main.rs
server/src/application/: metaapi.rs  mod.rs  v1api.rs  v1query.rs
server/src/metainfo/: loaders.rs  mod.rs
server/src/security/: authorization.rs  identity.rs  mod.rs
server/src/server/: config.rs  datasource.rs  mod.rs  setup.rs
